<resources>
    <string name="app_name">SDKShowcase</string>

    <string name="pubnative">PubNative</string>

    <string name="banner">Banner</string>
    <string name="feed_small">Feed (Small)</string>
    <string name="feed_medium">Feed (Medium)</string>
    <string name="interstitial">Interstitial</string>

    <string name="demand_config">Demand Config</string>
    <string name="config_native">Native</string>
    <string name="config_standard">Standard</string>
    <string name="config_video">Video</string>
    <string name="config_ad_tag">Ad-Tag</string>
    <string name="config_native_default">Native by default</string>


</resources>
