<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.pubnative.sdkshowcase.ui.fragments.DemandConfigFragment"
    tools:showIn="@layout/activity_demand_config">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/pubnative_config_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/activity_top_margin">

            <RadioButton
                android:id="@+id/pubnative_native_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/config_native"
                android:textSize="@dimen/radio_text_size" />

            <RadioButton
                android:id="@+id/pubnative_standard_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_group_item_vertical_margin"
                android:text="@string/config_standard"
                android:textSize="@dimen/radio_text_size" />

            <RadioButton
                android:id="@+id/pubnative_video_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_group_item_vertical_margin"
                android:text="@string/config_video"
                android:textSize="@dimen/radio_text_size" />

            <RadioButton
                android:id="@+id/pubnative_adtag_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/radio_group_item_vertical_margin"
                android:text="@string/config_ad_tag"
                android:textSize="@dimen/radio_text_size" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_dark" />

        <CheckBox
            android:id="@+id/pubnative_native_default_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="8dp"
            android:text="@string/config_native_default"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
