<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.pubnative.sdkshowcase.ui.fragments.MainFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/demang_config_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:clickable="true">

            <ImageView
                android:id="@+id/pubnative_logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="@dimen/side_margin"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/side_margin"
                android:layout_marginRight="@dimen/side_margin"
                android:layout_toLeftOf="@id/pubnative_logo"
                android:text="@string/pubnative"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/banner_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/activity_top_margin"
            android:text="@string/banner" />

        <Button
            android:id="@+id/feed_small_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/button_list_vertical_margin"
            android:text="@string/feed_small" />

        <Button
            android:id="@+id/feed_medium_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/button_list_vertical_margin"
            android:text="@string/feed_medium" />

        <Button
            android:id="@+id/interstitial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/button_list_vertical_margin"
            android:text="@string/interstitial" />

    </LinearLayout>
</ScrollView>
